# ComfyUI-ModelArchivist

./: .gitignore  ATTRIBUTIONS.md  README.md  config.toml  pyproject.toml  tsconfig.json
alembic/: alembic.ini  env.py
app/: __main__.py  gui.py
app/config/: config.py  config.toml
app/db/: repository.py  tables.py
app/files/: move.py
app/model/: archivist.py  file_handler.py  file_utils.py  object_types.py
backend/: __main__.py  config.py
backend/config/: config.py  config.toml
backend/db/: repository.py  tables.py
backend/files/: move.py
backend/model/: archivist.py  file_handler.py  file_utils.py  object_types.py  scanner.py
backend/server/: gui.py  models.py
backend/server/routers/: admin.py  health.py  models.py  tags.py
frontend/: README.md  package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.svelte  +page.svelte  ModelTable.svelte  model_filter.svelte
frontend/src/routes/collections/: CollectionActions.svelte  CollectionContents.svelte  CollectionFilter.svelte  CollectionTable.svelte
frontend/src/routes/header/: ArchivistHeader.svelte
frontend/src/routes/models/: ModelActions.svelte  ModelContents.svelte  ModelDetails.svelte  ModelFilter.svelte  ModelTable.svelte
frontend/src/routes/panels/: Heading.svelte  MainPanel.svelte  Sidebar.svelte
frontend/src/routes/workflows/: WorkflowActions.svelte  WorkflowContents.svelte  WorkflowTable.svelte
frontend/static/css/: archivist.css  controls.css  tags.css
test/back_end/: test_db.py
